objects/Contact_Purpose_Preference__c/Contact_Purpose_Preference__c.object-meta.xml
<CustomObject>
    <label>Contact Purpose Preference</label>
    <nameField>
        <displayFormat>CPP-{00000}</displayFormat>
        <label>Contact Purpose Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Purpose Preferences</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>