objects/Contact_Purpose_Preference__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact Purpose Preferences</relationshipLabel>
    <relationshipName>Contact_Purpose_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>