objects/Contact_Purpose_Preference__c/fields/Available_Period_End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Available_Period_End_DateTime__c</fullName>
    <label>Available Period End Date/Time</label>
    <type>DateTime</type>
</CustomField>