objects/Contact_Purpose_Preference__c/fields/Comany__c.field-meta.xml
<CustomField>
    <fullName>Comany__c</fullName>
    <label>Comany</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MAMHK</fullName>
            </value>
            <value>
                <fullName>MPFTC</fullName>
            </value>
            <value>
                <fullName>MIL*</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>