objects/Contact_Purpose_Preference__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Purpose Preferences</relationshipLabel>
    <relationshipName>Contact_Purpose_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>