objects/Contact_Purpose_Preference__c/fields/Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Contact_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Method</label>
    <referenceTo>Contact_Method__c</referenceTo>
    <relationshipLabel>Contact Purpose Preferences</relationshipLabel>
    <relationshipName>Contact_Purpose_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>