objects/Contact_Purpose_Preference__c/fields/Contact_Method_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Method_Type__c</fullName>
    <label>Contact Method Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>