objects/Contact_Purpose_Preference__c/fields/Contact_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Contact_Purpose__c</fullName>
    <label>Contact Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_Purpose</valueSetName>
    </valueSet>
</CustomField>